well that is a lot of work to add one line of output to LOOK, but now we can see items in rooms